--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1360px;
+  height: 100%;
+}
+
+.background {
+  background: url("./assets/background.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  position: relative;
+}
+
+.image {
+  width: 837px;
+  max-width: 100%;
+  height: 100vh;
+}
+
+.content {
+  max-width: 1260px;
+  width: 100%;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content_description {
+  max-width: 650px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content .button {
+  width: 250px;
+  background: #fff;
+  padding: 8px 24px;
+  box-sizing: border-box;
+  color: #000;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 500;
+  border-radius: 50%;
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  max-width: 1260px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 16px;
+  position: absolute;
+  bottom: 50px;
+  padding-inline: 50px;
+}
+.footer a {
+  text-decoration: none;
+}
+.footer-copyright {
+  color: #fff;
+  opacity: 0.5;
+}
+
+.footer-links__item {
+  color: #fff;
+  margin-right: 32px;
+  font-weight: 300;
+}
+.footer-links__item:last-child {
+  margin-right: 0;
+}
+
+.coaches {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
